--- a/port-fol/src/App.css
+++ b/port-fol/src/App.css
@@ -60,6 +60,22 @@
   border-color: #161616;
 }
 
+.nav_link--active{
+  color: #161616;
+  background-color: #41FF00;
+  border-color: #161616;
+  text-decoration: none;
+}
+
+.nav_link{
+  color:inherit;
+  text-decoration: none;
+}
+
+.nav_link:hover{
+  color: inherit;
+}
+
 .App-link {
   color: #61dafb;
 }
