--- a/port-fol/src/App.css
+++ b/port-fol/src/App.css
@@ -4,7 +4,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #161616;
+  background-color: #F2F2F0;
 }
 
 .App-logo {
@@ -20,7 +20,7 @@
 
 
 .App-header {
-  background-color: #161616;
+  background-color: #735646;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -28,41 +28,42 @@
   justify-content: start;
   font-size: calc(10px + 2vmin);
   font-weight: lighter;
-  color: #41FF00;
+  color: #BFBEAA;
 }
 
 .App-nav {
-  background-color: #161616;
+  background-color: #735646;
   min-height: 10vh;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #41FF00;
+  color: #BFBEAA;
 }
 
 .App-button {
   margin-inline: 3vh;
   min-height: 5vh;
   padding-inline: 2vh;
-  border-radius: 2vh;
+  border-radius: 0.5vh;
+  border-style: solid;
   font-size: calc(5px + 2vmin);
-  color: #41FF00;
-  background-color: #161616;
-  border-color: #41FF00;
+  color: #BFBEAA;
+  background-color: #735646;
+  border-color: #BFBEAA;
 }
 
 .App-button:hover{
   
-  color: #161616;
-  background-color: #41FF00;
-  border-color: #161616;
+  color: #735646;
+  background-color: #BFBEAA;
+  border-color: #735646;
 }
 
 .nav_link--active{
   color: #161616;
-  background-color: #41FF00;
+  background-color: #F2F2F0;
   border-color: #161616;
   text-decoration: none;
 }
@@ -81,18 +82,22 @@
 }
 
 .App-footer{
-  background-color: #161616;
+  background-color: #0D0D0D;
   margin-top: auto;
   min-height: 12vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #41FF00;
+  color: #F2F2F0;
+}
+
+.Footer-content{
+  align-content: center;
 }
 
 .Footer-Img{
-  color:#41FF00;
+  color:#F2F2F0;
   height: 5vmin;
   margin-inline: 2vmin;
 }
