--- a/port-fol/src/ContactPage/ContactPage.css
+++ b/port-fol/src/ContactPage/ContactPage.css
@@ -1,5 +1,5 @@
 .ContactPage {
-    background-color: #161616;
+    background-color: #F2F2F0;
     min-height: 12vh;
     display: flex;
     flex-direction: column;
@@ -7,5 +7,5 @@
     justify-content: start;
     font-size: calc(10px + 2vmin);
     font-weight: lighter;
-    color: #41FF00;
+    color: #0D0D0D;
 }
