--- a/port-fol/src/ProjectPage/ProjectPage.css
+++ b/port-fol/src/ProjectPage/ProjectPage.css
@@ -1,5 +1,5 @@
 .ProfilePage {
-    background-color: #161616;
+    background-color: #F2F2F0;
     min-height: 12vh;
     display: flex;
     flex-direction: column;
@@ -7,5 +7,34 @@
     justify-content: start;
     font-size: calc(10px + 2vmin);
     font-weight: lighter;
-    color: #41FF00;
+    color: #0D0D0D;
+}
+
+.SpotifyAPI{
+    border-radius:12px;
+    max-height: 1000px;
+    width:500px;
+    margin:5%;
+}
+
+.Podcast{
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.PodcastBeschr{
+    flex:50%;
+    border:#0D0D0D;
+    height:250px;
+    border-style: solid;
+}
+
+.PodcastSPAPI{
+    flex:50%;
+    border:#0D0D0D;
+    height:250px;
+    border-style: solid;
 }
