--- a/port-fol/src/index.css
+++ b/port-fol/src/index.css
@@ -1,5 +1,5 @@
 
-@font-face {
+/*@font-face {
   font-family: 'WhiteRabbit';
   font-style: normal;
   font-weight: normal;
@@ -9,7 +9,7 @@
 @font-face {
   font-family: 'PlayMeGames';
   src: url(./fonts/PlayMeGames-Demo.otf) format('opentype');
-}
+}*/
 
 body, button {
   margin: 0;
@@ -18,9 +18,9 @@ body, button {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+/*code {
   font-family: PlayMeGames;
-}
+}*/
 
 h1 {
   font-weight: lighter;
