--- a/port-fol/src/index.css
+++ b/port-fol/src/index.css
@@ -13,7 +13,7 @@
 
 body, button {
   margin: 0;
-  font-family: PlayMeGames;
+  font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
