Edit all layout, fix CV page and fix Projectspage

--- a/port-fol/src/App.css
+++ b/port-fol/src/App.css
@@ -97,12 +97,28 @@
   align-content: center;
 }
 
+.Footer-content p{
+  font-size: xx-small;
+  color:#BFBEAA;
+}
+
 .Footer-Img{
   color:#F2F2F0;
   height: 5vmin;
   margin-inline: 2vmin;
 }
 
+.fa {
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  color:#BFBEAA;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
 
 @keyframes App-logo-spin {
   from {
