--- a/port-fol/src/Pages/CVPage/CVPage.css
+++ b/port-fol/src/Pages/CVPage/CVPage.css
@@ -13,7 +13,15 @@
 
 .EmbeddedPDF{
     min-height:fit-content;
-    margin:2vmin;
+    /*margin:2vmin;*/
+}
+
+.pdf {
+    width: 100%;
+    aspect-ratio: 4 / 3;
+    height:100%;
+    padding:0;
+    margin: 0;
 }
 
 object{
