--- a/port-fol/src/Pages/HomePage/HomePage.css
+++ b/port-fol/src/Pages/HomePage/HomePage.css
@@ -1,10 +1,10 @@
 .HomePage {
     background-color: #F2F2F0;
     min-height: 12vh;
-    display: flex;
+    /*display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: start;*/
     font-size: calc(10px + 1vmin);
     font-weight: lighter;
     color: #0D0D0D;
@@ -13,4 +13,61 @@
 .Profile img {
     max-height: 50vmin;
     min-height: 20vmin;
+}
+
+/* Reset some default margin/padding */
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    display: flex;
+    /* Adjust alignment and spacing as needed */
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 80vh;
+}
+
+.image-column {
+    /* Adjust width and height as needed */
+    width: 40%;
+    margin-left: 100px; /* Adjust as needed */
+    z-index: 2;
+}
+
+.image-column img {
+    max-width: 100%; /* Make the image fill its container */
+    height: auto; /* Maintain aspect ratio */
+    display: block;
+    max-height: 450px;
+}
+
+.content-column {
+    flex: 1; /* Let this column take remaining space */
+    padding: 20px; /* Adjust padding as needed */
+    position: relative; /* Position relative for absolute positioning of black block */
+    justify-content: center;
+    align-items: center;
+    display:flex;
+    flex-direction: column;
+    min-height: 250px;
+    margin-right: 100px;
+}
+
+.text-content {
+    /* Scrollable text content */
+    overflow-y: auto;
+    text-align: left;
+    z-index: 2;
+    color:#0D0D0D;
+}
+
+.black-block {
+    background-color: #BFBEAA;
+    width: 100%;
+    height: 250px; /* Adjust height as needed */
+    position: absolute;
+    z-index: 0;
 }
