--- a/port-fol/src/index.css
+++ b/port-fol/src/index.css
@@ -13,7 +13,7 @@
 
 body, button {
   margin: 0;
-  font-family: sans-serif;
+  font-family: 'Verdana', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -24,4 +24,10 @@ body, button {
 
 h1 {
   font-weight: lighter;
+}
+
+h3{
+  font-family: "Verdana", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
 }
