Fix headers & Nav

--- a/port-fol/src/App.css
+++ b/port-fol/src/App.css
@@ -18,6 +18,10 @@
   }
 }
 
+h4{
+  margin: 2.5vh;
+}
+
 
 .App-header {
   background-color: #735646;
@@ -33,11 +37,12 @@
 
 .App-nav {
   background-color: #735646;
-  min-height: 6vh;
+  min-height: 5vh;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  width: 90%;
   font-size: calc(10px + 1vmin);
   color: #BFBEAA;
 }
@@ -45,8 +50,8 @@
 .App-button {
   margin-inline: 2vh;
   min-height: 2vh;
-  padding-inline: 2vh;
-  border-radius: 0.5vh;
+  padding: 1vh;
+  border-radius: 0.1vh;
   border-width: 0.1vh;
   border-style: none;
   font-size: calc(10px + 1vmin);
