--- a/port-fol/src/App.css
+++ b/port-fol/src/App.css
@@ -89,7 +89,6 @@ h4{
 
 .App-footer{
   background-color: #0D0D0D;
-  margin-top: auto;
   min-height: 12vh;
   display: flex;
   flex-direction: row;
@@ -194,4 +193,10 @@ h4{
       margin: 0.2rem 0.5rem;
   }
   
+}
+
+@media only screen and (max-width: 600px) {
+  .App-button{
+    margin:0rem;
+  }
 }
