--- a/port-fol/src/Pages/HomePage/HomePage.css
+++ b/port-fol/src/Pages/HomePage/HomePage.css
@@ -11,8 +11,8 @@
 }
 
 .Profile img {
-    max-height: 50vmin;
-    min-height: 20vmin;
+    max-height: 50%;
+    min-height: 20%;
 }
 
 /* Reset some default margin/padding */
@@ -23,6 +23,7 @@ html, body {
 
 .container {
     display: flex;
+    flex-direction: row;
     /* Adjust alignment and spacing as needed */
     justify-content: center;
     align-items: center;
@@ -32,29 +33,31 @@ html, body {
 
 .image-column {
     /* Adjust width and height as needed */
-    width: 40%;
-    margin-left: 100px; /* Adjust as needed */
+    margin:10%;
+    /* Adjust as needed */
     z-index: 2;
+    width:70%;
+    align-content: flex-end;
 }
 
-.image-column img {
-    max-width: 100%; /* Make the image fill its container */
-    height: auto; /* Maintain aspect ratio */
+.image-column img {/* Make the image fill its container */
+     /* Maintain aspect ratio */
     display: block;
-    max-height: 450px;
+    width: 100%;
 }
 
 .content-column {
+    width: 80%;
     flex: 1; /* Let this column take remaining space */
-    padding: 20px; /* Adjust padding as needed */
+    padding: 10%; /* Adjust padding as needed */
     position: relative; /* Position relative for absolute positioning of black block */
     justify-content: center;
     align-items: center;
     display:flex;
     flex-direction: column;
-    min-height: 250px;
-    max-height: 250px;
-    margin-right: 100px;
+    max-height: 50%;
+    margin-right:10%;
+    
 }
 
 .text-content {
@@ -68,30 +71,57 @@ html, body {
 .black-block {
     background-color: #BFBEAA;
     width: 100%;
-    height: 250px; /* Adjust height as needed */
+    max-height: 80%;
+    height: fit-content; /* Adjust height as needed */
     position: absolute;
     z-index: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-@media screen and (max-width: 600px) {
-    .someElement {
-        /* Styles for screens smaller than 600px */
-        .black-block {
-            background-color: #BFBEAA;
-            width: 100%;
-            height: 100%; /* Adjust height as needed */
-            position: absolute;
-            z-index: 0;
-        }
-        .container {
-            display: flex;
-            /* Adjust alignment and spacing as needed */
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            flex-direction: column;
-            /*justify-content: ;*/
-            height: 80vh;
-        }
+.firstHalve{
+    width: 50%;
+}
+
+.secondHalve{
+    width:50%;
+}
+
+@media only screen and (max-width: 600) {
+    
+}
+
+@media only screen and (max-width: 480px) {
+    .HomePage .container{
+        height: 100%;
+    }
+    .image-column{
+        display: block;
+        margin-right:0%;
+        align-content: center;
+        width: 80%;
+    }
+
+    .content-column{
+        padding:10%;
+        padding-bottom: 0%;
+    }
+
+    .black-block{
+        display: flex;
+        flex-direction: column-reverse;
+        position: relative;
+        align-items: center;
+        max-height:100%;
+        height: 100%;
+        background-color: #F2F2F0;
+    }
+    .firstHalve{
+        width: 100%;
+        align-items: center;
+    }
+    .secondHalve{
+        width: 100%;
     }
 }
